<resources>
    <string name="app_name">Chapter 4</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="gambarmenu">gambarMenu</string>
    <string name="lokasi">Lokasi</string>
    <string name="description">Description</string>
    <string name="harga_makanan">Harga Makanan</string>
    <string name="minus">Minus</string>
    <string name="plus">plus</string>
    <string name="_0">0</string>
</resources>