<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".viewModel.FragmentDetail.DetailInformation">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/iv_image1"
            android:layout_width="0dp"
            android:layout_height="200dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:scaleType="centerCrop"
            android:src="@drawable/paket_hemat"
            android:contentDescription="@string/gambarmenu" />
        <TextView
            android:id="@+id/namaMakanan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="15dp"
            android:textSize="14sp"
            android:text="Nama Makanan"
            app:layout_constraintStart_toStartOf="parent"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/iv_image1" />

        <TextView
            android:id="@+id/hargaMakanan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            android:textStyle="bold"
            android:layout_marginEnd="20dp"
            android:textSize="15sp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="15dp"
            android:text="@string/harga_makanan"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/iv_image1" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginLeft="15dp"

            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginRight="15dp"
            android:text="@string/description"
            app:layout_constraintTop_toBottomOf="@id/namaMakanan"/>

        <ImageButton
            android:id="@+id/lokasi"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@color/white"
            app:layout_constraintTop_toBottomOf="@id/description"
            android:src="@drawable/store"
            android:contentDescription="@string/lokasi" />
        <TextView
            android:id="@+id/tv_1"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginLeft="10dp"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toEndOf="@id/lokasi"
            app:layout_constraintTop_toBottomOf="@id/description"
            android:text="Lokasi"/>
        <TextView
            android:id="@+id/alamatToko"
            android:layout_marginEnd="20dp"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="0dp"
            android:layout_marginLeft="10dp"
            android:text="Alamat Toko"
            android:layout_marginBottom="20dp"
            app:layout_constraintTop_toBottomOf="@id/tv_1"
            app:layout_constraintStart_toEndOf="@id/lokasi"/>

        <ImageView
            android:id="@+id/plus"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/plus"
            android:layout_marginEnd="124dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@id/tambahKeranjang"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/plus" />

        <TextView
            android:id="@+id/tvCounter"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:text="@string/_0"
            app:layout_constraintEnd_toStartOf="@id/minus"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@id/tambahKeranjang"
            app:layout_constraintStart_toEndOf="@+id/plus" />

        <ImageView
            android:id="@+id/minus"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/minus"
            android:layout_marginStart="76dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@id/tambahKeranjang"
            app:layout_constraintEnd_toStartOf="@id/tvCounter"
            app:layout_constraintHorizontal_bias="0.416"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/alamatToko"
            app:layout_constraintVertical_bias="1.0"
            android:contentDescription="@string/minus" />

        <Button
            android:id="@+id/tambahKeranjang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:backgroundTint="@color/grey"
            android:text="Tambah Ke Keranjang"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:layout_marginTop="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="40dp"
            app:layout_constraintStart_toStartOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>